--- a/refs.bib
+++ b/refs.bib
@@ -1495,6 +1495,50 @@ collaboration = "Pr\^emio Nobel de F\'isica 2015, Ci\^encia Hoje 332, P\'agina 8
       SLACcitation   = "%%CITATION = ARXIV:1812.06364;%%"
 }
 
+@techreport{Rubbia:117852,
+      author        = "Rubbia, Carlo",
+      title         = "{The liquid-argon time projection chamber: a new concept
+                       for neutrino detectors}",
+      institution   = "CERN",
+      address       = "Geneva",
+      reportNumber  = "CERN-EP-INT-77-8",
+      year          = "1977",
+      url           = "https://cds.cern.ch/record/117852",
+}
+
+@article{Pietropaolo:2792672,
+      author        = "Pietropaolo, Francesco",
+      title         = "{Vertical Drift LAr-TPC for the DUNE Experiment. Vertical
+                       Drift LAr-TPC for the DUNE Experiment}",
+      month         = "Dec",
+      year          = "2021",
+      url           = "https://cds.cern.ch/record/2792672",
+}
+
+@article{Anderson_2012,
+	doi = {10.1088/1748-0221/7/10/p10019},
+  
+	url = {https://doi.org/10.1088%2F1748-0221%2F7%2F10%2Fp10019},
+  
+	year = 2012,
+	month = {oct},
+  
+	publisher = {{IOP} Publishing},
+  
+	volume = {7},
+  
+	number = {10},
+  
+	pages = {P10019--P10019},
+  
+	author = {C Anderson and M Antonello and B Baller and T Bolton and C Bromberg and F Cavanna and E Church and D Edmunds and A Ereditato and S Farooq and B Fleming and H Greenlee and R Guenette and S Haug and G Horton-Smith and C James and E Klein and K Lang and A Lathrop and P Laurens and S Linden and D McKee and R Mehdiyev and B Page and O Palamara and K Partyka and S Pordes and G Rameika and B Rebel and B Rossi and R Sanders and M Soderberg and J Spitz and A M Szelc and M Weber and T Wongjirad and T Yang and G P Zeller},
+  
+	title = {The {ArgoNeuT} detector in the {NuMI} low-energy beam line at Fermilab},
+  
+	journal = {Journal of Instrumentation}
+}
+
+
 @article{Abi_2020,
 	doi = {10.1088/1748-0221/15/08/t08010},
 	url = {https://doi.org/10.1088/1748-0221/15/08/t08010},
@@ -1509,3 +1553,56 @@ collaboration = "Pr\^emio Nobel de F\'isica 2015, Ci\^encia Hoje 332, P\'agina 8
 	journal = {Journal of Instrumentation},
 	abstract = {The preponderance of matter over antimatter in the early universe, the dynamics of the supernovae that produced the heavy elements necessary for life, and whether protons eventually decay—these mysteries at the forefront of particle physics and astrophysics are key to understanding the early evolution of our universe, its current state, and its eventual fate. DUNE is an international world-class experiment dedicated to addressing these questions as it searches for leptonic charge-parity symmetry violation, stands ready to capture supernova neutrino bursts, and seeks to observe nucleon decay as a signature of a grand unified theory underlying the standard model. Central to achieving DUNE's physics program is a far detector that combines the many tens-of-kiloton fiducial mass necessary for rare event searches with sub-centimeter spatial resolution in its ability to image those events, allowing identification of the physics signatures among the numerous backgrounds. In the single-phase liquid argon time-projection chamber (LArTPC) technology, ionization charges drift horizontally in the liquid argon under the influence of an electric field towards a vertical anode, where they are read out with fine granularity. A photon detection system supplements the TPC, directly enhancing physics capabilities for all three DUNE physics drivers and opening up prospects for further physics explorations. The DUNE far detector technical design report (TDR) describes the DUNE physics program and the technical designs of the single- and dual-phase DUNE liquid argon TPC far detector modules. Volume IV presents an overview of the basic operating principles of a single-phase LArTPC, followed by a description of the DUNE implementation. Each of the subsystems is described in detail, connecting the high-level design requirements and decisions to the overriding physics goals of DUNE.}
 }
+
+@misc{Abi2017,
+  doi = {10.48550/ARXIV.1706.07081},
+  
+  url = {https://arxiv.org/abs/1706.07081},
+  
+  author = {Abi, B. and Acciarri, R. and Acero, M. A. and Adamowski, M. and Adams, C. and Adams, D. L. and Adamson, P. and Adinolfi, M. and Ahmad, Z. and Albright, C. H. and Alion, T. and Anderson, J. and Anderson, K. and Andreopoulos, C. and Andrews, M. P. and Andrews, R. A. and Anjos, J. dos and Ankowski, A. and Anthony, J. and Antonello, M. and Fernandez, A. Aranda and Ariga, A. and Ariga, T. and Diaz, E. Arrieta and Asaadi, J. and Ascencio, M. and Asner, D. M. and Athar, M. S. and Auger, M. and Aurisano, A. and Aushev, V. and Autiero, D. and Azfar, F. and Back, J. J. and Back, H. O. and Backhouse, C. and Bai, X. and Baird, M. and Balantekin, A. B. and Balasubramanian, S. and Baller, B. and Ballett, P. and Bambah, B. and Band, H. and Bansal, M. and Bansal, S. and Barker, G. J. and Barr, G. and Monarca, J. Barranco and Barros, N. and Bashyal, A. and Bass, M. and Bay, F. and Bazo, J. L. and Beacom, J. F. and Behera, B. R. and Bellettini, G. and Bellini, V. and Beltramello, O. and Benekos, N. and Benetti, P. A. and Bercellie, A. and Berman, E. and Berns, H. and Bernstein, R. and Bertolucci, S. and Bhatnagar, V. and Bhuyan, B. and Bian, J. and Biery, K. and Bishai, M. and Bitadze, A. and Blackburn, T. and Blake, A. and Blaszczyk, F. d. M. and Blaufuss, E. and Blazey, G. C. and Blennow, M. and Blucher, E. and Bocean, V. and Boffelli, F. and Boissevain, J. and Bolognesi, S. and Bolton, T. and Bonesini, M. and Boone, T. and Booth, C. and Bordoni, S. and Bour, P. and Bourguille, B. and Boyd, S. B. and Boyden, D. and Brailsford, D. and Brandt, A. and Bremer, J. and Brice, S. J. and Bromberg, C. and Brooijmans, G. and Brown, G. and Brunetti, G. and Buchanan, N. and Budd, H. and Calafiura, P. and Calatayud, A. and Calligarich, E. and Calvo, E. and Camilleri, L. and Campanelli, M. and Cantini, C. and Carls, B. and Cascella, M. and Catano-Mur, E. and Cavaili-Sforza, M. and Cavanna, F. and Centro, S. and Villanueva, A. Cervera and Cervi, T. and Chalifour, M. and Chappuis, A. and Chatterjee, A. and Chattopadhyay, S. and Chattopadhyay, S. and Chaussard, L. and Chembra, S. and Chen, H. and Chen, M. and Cherdack, D. and Chi, C. and Childress, S. and Choubey, S. and Choudhary, B. C. and Christodoulou, G. and Christofferson, C. and Church, E. and Coan, T. E. and Cocco, A. and Cole, P. and Collin, G. and Conrad, J. M. and Convery, M. and Corey, R. and Corwin, L. and Crespo-Anadón, J. I. and Prats, J. Creus and Crivelli, P. and Cronin-Hennessy, D. and Crowley, C. and Curioni, A. and Cussans, D. and da Motta, H. and Dale, D. and Davenne, T. and Davies, G. S. and Davies, J. and Dawson, J. and De, K. and De Bonis, I. and De Gouvea, A. and de Holanda, P. C. and De Jong, P. and De Lurgio, P. and de Vries, J. J. and Decowski, M. P. and Dedin-Neto, P. and Delbart, A. and Delepine, D. and Delgado, M. and Demuth, D. and Dennis, S. and Densham, C. and Dharmapalan, R. and Dhingra, N. and Diamantopoulou, M. and Diaz, J. S. and Bautista, G. Diaz and Ding, P. and Diwan, M. and Djurcic, Z. and Dolinski, M. J. and Drake, G. and Duchesneau, D. and Dutta, D. and Duvernois, M. and Duyang, H. and Dwyer, D. A. and Dye, S. and Dyshkant, A. S. and Dytman, S. and Eads, M. and Eberly, B. and Edmunds, D. and Elliott, S. and Ellsworth, W. M. and Elnimr, M. and Emery, S. and Eno, S. and Ereditato, A. and Escobar, C. O. and Sanchez, L. Escudero and Evans, J. J. and Fahey, K. and Falcone, A. and Falk, L. and Farbin, A. and Farnese, C. and Farzan, Y. and Fasoli, M. and Fava, A. and Felix, J. and Menendez, P. Fernandez and Fernandez-Martinez, E. and Fields, L. and Filthaut, F. and Finch, A. and Fitton, M. and Fleming, B. T. and Forest, T. and Fowler, J. and Fox, W. and Freeman, J. and Freestone, J. and Friant, D. and Fried, J. and Friedland, A. and Fuess, S. and Fujikawa, B. and Gago, A. and Gallagher, H. and Galvin, S. and Galymov, S. and Gamble, T. and Gandhi, R. and Gao, S. and Garcia-Gamez, D. and Gardiner, S. and Gastler, D. and Gendotti, A. and Gibin, D. and Gil-Botella, I. and Gill, R. and Giri, A. K. and Goeldi, D. and Gold, M. and Gollapinni, S. and Gomes, R. A. and Cadenas, J. J. Gomez and Goodman, M. C. and Gorbunov, D. and Goswami, S. and Graf, N. and Graf, N. and Graham, M. and Gramelini, E. and Gran, R. and Grant, C. and Grant, N. and Greco, V. and Greenlee, H. and Greenler, L. and Groh, M. and Grzelak, K. and Guardincerri, E. and Guarino, V. and Guedes, G. P. and Guenette, R. and Guglielmi, A. and Guthikonda, K. K. and Guzzo, M. M. and Habig, A. T. and Hackenburg, A. and Hackenburg, R. W. and Hadavand, H. and Haenni, R. and Hahn, A. and Haigh, M. D. and Haines, T. and Hamernik, T. and Hamilton, P. and Handler, T. and Hans, S. and Harris, D. and Hartnell, J. and Hasegawa, T. and Hatcher, R. and Hatzikoutelis, A. and Hays, S. and Hazen, E. and Headley, M. and Heavey, A. and Heeger, K. M. and Heise, J. and Hennessy, K. and Henry, S. and Hernandez-Garcia, J. and Hewes, J. and Higuera, A. and Hill, T. and Himmel, A. and Holin, A. and Hoppe, E. W. and Horikawa, S. and Horton-Smith, G. and Hostert, M. and Hourlier, A. and Howard, B. and Howell, J. and Hugon, J. and Hurh, P. and Huston, J. and Hylen, J. and Insler, J. and Introzzi, G. and Ioannisian, A. and Izmaylov, A. and Jaffe, D. E. and James, C. and James, E. and Jang, C. H. and Jediny, F. and Jen, C. and Jhingan, A. and Jiménez, S. and Johnson, M. and Johnson, R. and Johnstone, J. and Joshi, J. and Jostlein, H. and Jung, C. K. and Junk, T. and Kaboth, A. and Kadenko, I. and Kamyshkov, Y. and Karagiorgi, G. and Karasavvas, D. and Karyotakis, Y. and Kaur, P. and Kayser, B. and Kazaryan, N. and Kearns, E. and Keener, P. T. and Kemp, E. and Kendziora, C. and Ketchum, W. and Kettell, S. H. and Khabibullin, M. and Khotjantsev, A. and Kirby, B. and Kirby, M. and Klein, J. and Ko, Y. J. and Kobilarcik, T. and Kocaman, B. and Koerner, L. W. and Kohn, S. and Koizumi, G. and Kopylov, A. and Kordosky, M. and Kormos, L. and Kose, U. and Kostelecký, V. A. and Kramer, M. and Kreslo, I. and Kriesel, K. and Kropp, W. and Kudenko, Y. and Kudryavtsev, V. A. and Kulagin, S. and Kumar, A. and Kumar, J. and Kumar, L. and Kus, V. and Kutter, T. and Lande, K. and Lane, C. and Lang, K. and Langford, T. and Lanni, F. and Laundrie, A. and Le, T. and Learned, J. and Lebrun, P. and Lee, D. and Lee, W. M. and de Oliveira, M. A. Leigui and Li, Q. Z. and Li, S. and Li, S. W. and Li, X. and Li, Y. and Li, Z. and Lin, C. S. and Lin, S. and Linehan, R. and Link, J. and Liptak, Z. and Lissauer, D. and Littenberg, L. and Littlejohn, B. R. and Liu, J. and Liu, Q. and Liu, T. and Lockwitz, S. and Lockyer, N. and Loew, T. and Lokajicek, M. and LoMonaco, L. and Long, K. and Loo, K. and Lopez, J. P. and Lorca, D. and LoSecco, J. M. and Louis, W. and Luethi, M. and Luk, K. B. and Lundin, T. and Luo, X. and Lux, T. and Lykken, J. and Maalampi, J. and Machado, A. A. and Macias, C. T. and Macier, J. R. and MacLellan, R. and Magill, S. and Mahler, G. and Mahn, K. and Malek, M. and Mammoliti, F. and Mandal, S. K. and Mandodi, S. and Manly, S. and Mann, A. and Marchionni, A. and Marciano, W. and Marfatia, D. and Mariani, C. and Maricic, J. and Marino, A. D. and Marshak, M. and Marshall, C. M. and Marshall, J. and Marteau, J. and Martin-Albo, J. and Caicedo, D. A. Martinez and Masud, M. and Matsuno, S. and Matthews, J. and Mauger, C. and Mavrokoridis, K. and Mazza, R. and Mazzacane, A. and Mazzucato, E. and McCauley, N. and McCluskey, E. and McConkey, N. and McDonald, K. T. and McFarland, K. S. and McGivern, C. and McGowan, A. M. and McGrew, C. and McGuinness, S. R. and McKeown, R. and McNulty, D. and McTaggart, R. and Mefodiev, A. and Mehta, P. and Mei, D. and Mena, O. and Menary, S. and Mendez, D. P. and Mendez, H. and Menegolli, A. and Meng, G. and Messier, M. and Metcalf, W. and Mewes, M. and Meyer, H. and Miao, T. and Milincic, R. and Miller, W. and Mills, G. and Mineev, O. and Miranda, O. G. and Mishra, C. S. and Mishra, S. R. and Mitrica, B. and Mladenov, D. and Mocioiu, I. and Moffat, K. and Mohanta, R. and Mokhov, N. and Bueno, L. Molina and Montanari, C. and Montanari, D. and Moon, J. and Mooney, M. and Moore, C. D. and Morgan, B. and Morris, C. and Morse, W. and Mossey, C. and Moura, C. A. and Mousseau, J. and Mualem, L. and Muether, M. and Mufson, S. and Murphy, S. and Musser, J. and Nakajima, Y. and Naples, D. and Navarro, J. and Navas-Nicolás, D. and Nelson, J. and Nessi, M. and Newbold, D. and Newcomer, M. and Nguyen, K. T. T. and Nichol, R. and Nicholls, T. C. and Niner, E. and Norman, A. and Norris, B. and Novakova, P. and Novella, P. and Nowak, E. and Nowak, J. and Nunes, M. S. and O'Keeffe, H. and Del Campo, A. Olivares and Oliveira, R. and Olivier, A. and Onishchuk, Y. and Ovsjannikova, T. and Pakvasa, S. and Palamara, O. and Paley, J. and Palomares, C. and Pantic, E. and Paolone, V. and Papadimitriou, V. and Paramesvaran, S. and Park, J. and Parke, S. and Parsa, Z. and Pascoli, S. and Pasternak, J. and Pater, J. and Patterson, R. B. and Patton, S. J. and Patzak, T. and Paulos, B. and Paulucci, L. and Pavlovic, Z. and Pawloski, G. and Payne, D. and Peeters, S. J. M. and Pennacchio, E. and Perdue, G. N. and Peres, O. L. G. and Periale, L. and Perkin, J. D. and Petridis, K. and Petti, R. and Petukhov, A. and Picchi, P. and Pietropaolo, F. and Plonski, P. and Plunkett, R. and Poling, R. and Popovic, M. and Pordes, R. and Pordes, S. and Potekhin, M. and Potenza, R. and Potukuchi, B. and Poudel, S. and Pozimski, J. and Prokofiev, O. and Pruthi, N. and Przewlocki, P. and Pumulo, N. and Pushka, D. and Qian, X. and Raaf, J. L. and Raboanary, R. and Radeka, V. and Rademacker, J. and Radics, B. and Radovic, A. and Rakhno, I. and Rakotondramanana, H. T. and Rakotondravohitra, L. and Ramachers, Y. A. and Rameika, R. and Ramsey, J. and Rappoldi, A. and Raselli, G. and Ratoff, P. and Rebel, B. and Regenfus, C. and Reichenbacher, J. and Reitzner, S. D. and Remoto, A. and Renshaw, A. and Rescia, S. and Rice, L. and Rielage, K. and Riesselmann, K. and Rivera, D. and Robinson, M. and Rochester, L. and Rodrigues, O. B. and Rodrigues, P. and Roe, B. and Roser, R. M. and Ross-Lonergan, M. and Rossella, M. and Rout, J. and Roy, S. and Rubbia, A. and Rubbia, C. and Rucinski, R. and von Rohr, C. Rudolph and Russell, B. and Ruterbories, D. and Saakyan, R. and Sachdev, K. and Sahu, N. and Sala, P. and Samios, N. and Sanchez, F. and Sanchez, M. C. and Sands, W. R. and Santana, S. and Santorelli, R. and Santos, L. M. and Santucci, G. and Saoulidou, N. and Savage, G. and Scaramelli, A. and Scarpelli, A. and Schaffer, T. and Schellman, H. and Schlabach, P. and Schmitz, D. and Schneps, J. and Scholberg, K. and Schukraft, A. and Segreto, E. and Sehrawat, S. and Sepulveda-Quiroz, J. A. and Sergiampietri, F. and Sexton, K. and Sexton-Kennedy, L. and Shaevitz, M. H. and Shahi, J. and Shahsavarani, S. and Shanahan, P. and Sharma, R. and Sharma, R. K. and Shaw, T. and Shooltz, D. and Shrock, R. and Simos, N. and Sinclair, J. and Sinev, G. and Singh, I. and Singh, J. and Singh, J. and Singh, V. and Sippach, F. W. and Siyeon, K. and Smith, A. and Smith, P. and Smolik, J. and Smy, M. and Snider, E. and Snopok, P. and Sobczyk, J. and Sobel, H. and Soderberg, M. and Solomey, N. and Sondheim, W. and Sorel, M. and Sousa, A. and Soustruznik, K. and Spanu, M. and Spitz, J. and Spooner, N. J. C. and Stancari, M. and Stefan, D. and Stefanik, A. and Steiner, H. M. and Stewart, J. and Stock, J. and Stoica, S. and Stone, J. and Strait, J. and Strait, M. and Strauss, T. and Striganov, S. and Sulej, R. and Sullivan, G. and Sun, Y. and Suter, L. and Sutera, C. M. and Svoboda, R. and Szczerbinska, B. and Szelc, A. M. and Söldner-Rembold, S. and Talaga, R. and Tariq, S. and Tatar, E. and Tayloe, R. and Terao, K. and Thiesse, M. and Thompson, L. F. and Thomson, M. and Thorn, C. and Thorpe, M. and Tian, X. and Tiedt, D. and Timm, S. C. and Todd, J. and Tonazzo, A. and Tope, T. and Torres, F. R. and Torti, M. and Tortola, M. and Tortorici, F. and Toups, M. and Touramanis, C. and Trevor, J. and Tripathi, M. and Tropin, I. and Trzaska, W. H. and Tsai, Y. and Tsang, K. V. and Tsaris, A. and Tsenov, R. and Tufanli, S. and Tull, C. and Turner, J. and Tzanov, M. and Tziaferi, E. and Uchida, Y. and Sankar, S. Uma and Urheim, J. and Usher, T. and Vagins, M. R. and Vahle, P. and Valdiviesso, G. A. and Valerio, L. and Vallari, Z. and Valle, J. and Van Berg, R. and Van de Water, R. and Varanini, F. and Varner, G. and Vasseur, G. and Vaziri, K. and Velev, G. and Ventura, S. and Verdugo, A. and Vermeulen, M. A. and Vernon, E. and Viant, T. and Vieira, T. V. and Vignoli, C. and Vihonen, S. and Vilela, C. and Viren, B. and Vokac, P. and Vrba, T. and Wachala, T. and Wahl, D. and Wallbank, M. and Wang, B. and Wang, H. and Wang, T. and Warburton, T. K. and Warner, D. and Wascko, M. and Waters, D. and Weber, A. and Weber, M. and Wei, W. and Weinstein, A. and Wenman, D. and Wetstein, M. and White, A. and Whitehead, L. H. and Whittington, D. and Wilking, M. J. and Willhite, J. and Wilson, P. and Wilson, R. J. and Wittich, P. and Wolcott, J. and Wong, H. H. and Wongjirad, T. and Wood, K. and Wood, L. S. and Worcester, E. and Worcester, M. and Wu, S. and Xu, W. and Yanagisawa, C. and Yang, S. and Yang, T. and Ye, J. and Yeh, M. and Yershov, N. and Yonehara, K. and Yu, B. and Yu, J. and Zalesak, J. and Zambelli, L. and Zamorano, B. and Zang, L. and Zani, A. and Zaremba, K. and Zeller, G. P. and Zhang, C. and Zhang, C. and Zhou, Y. and Zimmerman, E. D. and Zito, M. and Zuklin, J. and Zutshi, V. and Zwaska, R.},
+  
+  keywords = {Instrumentation and Detectors (physics.ins-det), High Energy Physics - Experiment (hep-ex), FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = {The Single-Phase ProtoDUNE Technical Design Report},
+  
+  publisher = {arXiv},
+  
+  year = {2017},
+  
+  copyright = {Creative Commons Attribution Share Alike 4.0 International}
+}
+
+@misc{Bartoszek2015,
+  doi = {10.48550/ARXIV.1501.05241},
+  
+  url = {https://arxiv.org/abs/1501.05241},
+  
+  author = {Bartoszek, L. and Barnes, E. and Miller, J. P. and Mott, J. and Palladino, A. and Quirk, J. and Roberts, B. L. and Crnkovic, J. and Polychronakos, V. and Tishchenko, V. and Yamin, P. and Cheng, C. -h. and Echenard, B. and Flood, K. and Hitlin, D. G. and Kim, J. H. and Miyashita, T. S. and Porter, F. C. and Röhrken, M. and Trevor, J. and Zhu, R. -Y. and Heckmaier, E. and Kang, T. I. and Lim, G. and Molzon, W. and You, Z. and Artikov, A. M. and Budagov, J. A. and Davydov, Yu. I. and Glagolev, V. V. and Simonenko, A. V. and Usubov, Z. U. and Oh, S. H. and Wang, C. and Ambrosio, G. and Andreev, N. and Arnold, D. and Ball, M. and Bernstein, R. H. and Bianchi, A. and Biery, K. and Bossert, R. and Bowden, M. and Brandt, J. and Brown, G. and Brown, H. and Buehler, M. and Campbell, M. and Cheban, S. and Chen, M. and Coghill, J. and Coleman, R. and Crowley, C. and Deshpande, A. and Deuerling, G. and Dey, J. and Dhanaraj, N. and Dinnon, M. and Dixon, S. and Drendel, B. and Eddy, N. and Evans, R. and Evbota, D. and Fagan, J. and Feher, S. and Fellenz, B. and Friedsam, H. and Gallo, G. and Gaponenko, A. and Gardner, M. and Gaugel, S. and Genser, K. and Ginther, G. and Glass, H. and Glenzinski, D. and Hahn, D. and Hansen, S. and Hartsell, B. and Hays, S. and Hocker, J. A. and Huedem, E. and Huffman, D. and Ibrahim, A. and Johnstone, C. and Kashikhin, V. and Kashikhin, V. V. and Kasper, P. and Kiper, T. and Knapp, D. and Knoepfel, K. and Kokoska, L. and Kozlovsky, M. and Krafczyk, G. and Kramp, M. and Krave, S. and Krempetz, K. and Kutschke, R. K. and Kwarciany, R. and Lackowski, T. and Lamm, M. J. and Larwill, M. and Leavell, F. and Leeb, D. and Leveling, A. and Lincoln, D. and Logashenko, V. and Lombardo, V. and Lopes, M. L. and Makulski, A. and Martinez, A. and McArthur, D. and McConologue, F. and Michelotti, L. and Mokhov, N. and Morgan, J. and Mukherjee, A. and Murat, P. and Nagaslaev, V. and Neuffer, D. V. and Nicol, T. and Niehoff, J. and Nogiec, J. and Olson, M. and Orris, D. and Ostojic, R. and Page, T. and Park, C. and Peterson, T. and Pilipenko, R. and Pla-Dalmau, A. and Poloubotko, V. and Popovic, M. and Prebys, E. and Prieto, P. and Pronskikh, V. and Pushka, D. and Rabehl, R. and Ray, R. E. and Rechenmacher, R. and Rivera, R. and Robotham, W. and Rubinov, P. and Rusu, V. L. and Scarpine, V. and Schappert, W. and Schoo, D. and Stefanik, A. and Still, D. and Tang, Z. and Tanovic, N. and Tartaglia, M. and Tassotto, G. and Tinsley, D. and Tschirhart, R. S. and Vogel, G. and Wagner, R. and Wands, R. and Wang, M. and Werkema, S. and White, H. B. and Whitmore, J. and Wielgos, R. and Woods, R. and Worel, C. and Zifko, R. and Ciambrone, P. and Colao, F. and Cordelli, M. and Corradi, G. and Dane, E. and Giovannella, S. and Happacher, F. and Luca, A. and Miscetti, S. and Ponzio, B. and Pileggi, G. and Saputi, A. and Sarra, I. and Soleti, R. S. and Stomaci, V. and Martini, M. and Fabbricatore, P. and Farinon, S. and Musenich, R. and Alexander, D. and Daniel, A. and Empl, A. and Hungerford, E. V. and Lau, K. and Gollin, G. D. and Huang, C. and Roderick, D. and Trundy, B. and Brown, D. Na. and Ding, D. and Kolomensky, Yu. G. and Lee, M. J. and Cascella, M. and Grancagnolo, F. and Ignatov, F. and Innocente, A. and L'Erario, A. and Miccoli, A. and Maffezzoli, A. and Mazzotta, P. and Onorato, G. and Piacentino, G. M. and Rella, S. and Rossetti, F. and Spedicato, M. and Tassielli, G. and Taurino, A. and Zavarise, G. and Hooper, R. and Brown, D. No. and Djilkibaev, R. and Matushko, V. and Ankenbrandt, C. and Boi, S. and Dychkant, A. and Hedin, D. and Hodge, Z. and Khalatian, V. and Majewski, R. and Martin, L. and Okafor, U. and Pohlman, N. and Riddel, R. S. and Shellito, A. and de Gouvea, A. L. and Cervelli, F. and Carosi, R. and Di Falco, S. and Donati, S. and Lomtadze, T. and Pezzullo, G. and Ristori, L. and Spinella, F. and Jones, M. and Corcoran, M. D. and Orduna, J. and Rivera, D. and Bennett, R. and Caretta, O. and Davenne, T. and Densham, C. and Loveridge, P. and Odell, J. and Bomgardner, R. and Dukes, E. C. and Ehrlich, R. and Frank, M. and Goadhouse, S. and Group, R. and Ho, E. and Ma, H. and Oksuzian, Y. and Purvis, J. and Wu, Y. and Hertzog, D. W. and Kammel, P. and Lynch, K. R. and Popp, J. L.},
+  
+  keywords = {Instrumentation and Detectors (physics.ins-det), High Energy Physics - Experiment (hep-ex), FOS: Physical sciences, FOS: Physical sciences},
+  
+  title = {Mu2e Technical Design Report},
+  
+  publisher = {arXiv},
+  
+  year = {2015},
+  
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{Abi_2020_2,
+	doi = {10.1088/1748-0221/15/08/t08009},
+	url = {https://doi.org/10.1088/1748-0221/15/08/t08009},
+	year = 2020,
+	month = {aug},
+	publisher = {{IOP} Publishing},
+	volume = {15},
+	number = {08},
+	pages = {T08009--T08009},
+	author = {B. Abi and R. Acciarri and M.A. Acero and G. Adamov and D. Adams and M. Adinolfi and Z. Ahmad and J. Ahmed and T. Alion and S. Alonso Monsalve and C. Alt and J. Anderson and C. Andreopoulos and M. Andrews and F. Andrianala and S. Andringa and A. Ankowski and M. Antonova and S. Antusch and A. Aranda-Fernandez and A. Ariga and L.O. Arnold and M.A. Arroyave and J. Asaadi and A. Aurisano and V. Aushev and D. Autiero and F. Azfar and H. Back and J.J. Back and C. Backhouse and P. Baesso and L. Bagby and R. Bajou and S. Balasubramanian and P. Baldi and B. Bambah and F. Barao and G. Barenboim and G. Barker and W. Barkhouse and C. Barnes and G. Barr and J. Barranco Monarca and N. Barros and J.L. Barrow and A. Bashyal and V. Basque and F. Bay and J. Bazo Alba and J.F. Beacom and E. Bechetoille and B. Behera and L. Bellantoni and G. Bellettini and V. Bellini and O. Beltramello and D. Belver and N. Benekos and F. Bento Neves and J. Berger and S. Berkman and P. Bernardini and R.M. Berner and H. Berns and S. Bertolucci and M. Betancourt and Y. Bezawada and M. Bhattacharjee and B. Bhuyan and S. Biagi and J. Bian and M. Biassoni and K. Biery and B. Bilki and M. Bishai and A. Bitadze and A. Blake and B. Blanco Siffert and F. Blaszczyk and G. Blazey and E. Blucher and J. Boissevain and S. Bolognesi and T. Bolton and M. Bonesini and M. Bongrand and F. Bonini and A. Booth and C. Booth and S. Bordoni and A. Borkum and T. Boschi and N. Bostan and P. Bour and S. Boyd and D. Boyden and J. Bracinik and D. Braga and D. Brailsford and A. Brandt and J. Bremer and C. Brew and E. Brianne and S.J. Brice and C. Brizzolari and C. Bromberg and G. Brooijmans and J. Brooke and A. Bross and G. Brunetti and N. Buchanan and H. Budd and D. Caiulo and P. Calafiura and J. Calcutt and M. Calin and S. Calvez and E. Calvo and L. Camilleri and A. Caminata and M. Campanelli and D. Caratelli and G. Carini and B. Carlus and P. Carniti and I. Caro Terrazas and H. Carranza and A. Castillo and C. Castromonte and C. Cattadori and F. Cavalier and F. Cavanna and S. Centro and G. Cerati and A. Cervelli and A. Cervera Villanueva and M. Chalifour and C. Chang and E. Chardonnet and A. Chatterjee and S. Chattopadhyay and J. Chaves and H. Chen and M. Chen and Y. Chen and D. Cherdack and C. Chi and S. Childress and A. Chiriacescu and K. Cho and S. Choubey and A. Christensen and D. Christian and G. Christodoulou and E. Church and P. Clarke and T.E. Coan and A.G. Cocco and J. Coelho and E. Conley and J. Conrad and M. Convery and L. Corwin and P. Cotte and L. Cremaldi and L. Cremonesi and J.I. Crespo-Anad{\'{o}}n and E. Cristaldo and R. Cross and C. Cuesta and Y. Cui and D. Cussans and M. Dabrowski and H. Da Motta and L. Da Silva Peres and Q. David and G.S. Davies and S. Davini and J. Dawson and K. De and R.M. De Almeida and P. Debbins and I. De Bonis and M. Decowski and A. De Gouvea and P.C. De Holanda and I.L. De Icaza Astiz and A. Deisting and P. De Jong and A. Delbart and D. Delepine and M. Delgado and A. Dell{\textquotesingle}Acqua and P. De Lurgio and J.R. De Mello Neto and D.M. DeMuth and S. Dennis and C. Densham and G. Deptuch and A. De Roeck and V. De Romeri and J. De Vries and R. Dharmapalan and M. Dias and F. Diaz and J. Diaz and S. Di Domizio and L. Di Giulio and P. Ding and L. Di Noto and C. Distefano and R. Diurba and M. Diwan and Z. Djurcic and N. Dokania and M. Dolinski and L. Domine and D. Douglas and F. Drielsma and D. Duchesneau and K. Duffy and P. Dunne and T. Durkin and H. Duyang and O. Dvornikov and D. Dwyer and A. Dyshkant and M. Eads and D. Edmunds and J. Eisch and S. Emery and A. Ereditato and C. Escobar and L. Escudero Sanchez and J.J. Evans and E. Ewart and A.C. Ezeribe and K. Fahey and A. Falcone and C. Farnese and Y. Farzan and J. Felix and E. Fernandez-Martinez and P. Fernandez Menendez and F. Ferraro and L. Fields and A. Filkins and F. Filthaut and R.S. Fitzpatrick and W. Flanagan and B. Fleming and R. Flight and J. Fowler and W. Fox and J. Franc and K. Francis and D. Franco and J. Freeman and J. Freestone and J. Fried and A. Friedland and S. Fuess and I. Furic and A.P. Furmanski and A. Gago and H. Gallagher and A. Gallego-Ros and N. Gallice and V. Galymov and E. Gamberini and T. Gamble and R. Gandhi and R. Gandrajula and S. Gao and D. Garcia-Gamez and M.{\'{A}}. Garc{\'{\i}}a-Peris and S. Gardiner and D. Gastler and G. Ge and B. Gelli and A. Gendotti and S. Gent and Z. Ghorbani-Moghaddam and D. Gibin and I. Gil-Botella and C. Girerd and A. Giri and D. Gnani and O. Gogota and M. Gold and S. Gollapinni and K. Gollwitzer and R.A. Gomes and L. Gomez Bermeo and L.S. Gomez Fajardo and F. Gonnella and J. Gonzalez-Cuevas and M.C. Goodman and O. Goodwin and S. Goswami and C. Gotti and E. Goudzovski and C. Grace and M. Graham and E. Gramellini and R. Gran and E. Granados and A. Grant and C. Grant and D. Gratieri and P. Green and S. Green and L. Greenler and M. Greenwood and J. Greer and C. Griffith and M. Groh and J. Grudzinski and K. Grzelak and W. Gu and V. Guarino and R. Guenette and A. Guglielmi and B. Guo and K. Guthikonda and R. Gutierrez and P. Guzowski and M.M. Guzzo and S. Gwon and A. Habig and A. Hackenburg and H. Hadavand and R. Haenni and A. Hahn and J. Haigh and J. Haiston and T. Hamernik and P. Hamilton and J. Han and K. Harder and D.A. Harris and J. Hartnell and T. Hasegawa and R. Hatcher and E. Hazen and A. Heavey and K.M. Heeger and K. Hennessy and S. Henry and M. Hernandez Morquecho and K. Herner and L. Hertel and A.S. Hesam and J. Hewes and A. Higuera Pichardo and T. Hill and S.J. Hillier and A. Himmel and J. Hoff and C. Hohl and A. Holin and E. Hoppe and G.A. Horton-Smith and M. Hostert and A. Hourlier and B. Howard and R. Howell and J. Huang and J. Huang and J. Hugon and G. Iles and A.M. Iliescu and R. Illingworth and A. Ioannisian and R. Itay and A. Izmaylov and E. James and B. Jargowsky and F. Jediny and C. Jes{\'{u}}s-Valls and X. Ji and L. Jiang and S. Jim{\'{e}}nez and A. Jipa and A. Joglekar and C. Johnson and R. Johnson and B. Jones and S. Jones and C. Jung and T. Junk and Y. Jwa and M. Kabirnezhad and A. Kaboth and I. Kadenko and F. Kamiya and G. Karagiorgi and A. Karcher and M. Karolak and Y. Karyotakis and S. Kasai and S.P. Kasetti and L. Kashur and N. Kazaryan and E. Kearns and P. Keener and K.J. Kelly and E. Kemp and W. Ketchum and S. Kettell and M. Khabibullin and A. Khotjantsev and A. Khvedelidze and D. Kim and B. King and B. Kirby and M. Kirby and J. Klein and K. Koehler and L.W. Koerner and S. Kohn and P.P. Koller and M. Kordosky and T. Kosc and U. Kose and V. Kostelecky and K. Kothekar and F. Krennrich and I. Kreslo and Y. Kudenko and V. Kudryavtsev and S. Kulagin and J. Kumar and R. Kumar and C. Kuruppu and V. Kus and T. Kutter and A. Lambert and K. Lande and C.E. Lane and K. Lang and T. Langford and P. Lasorak and D. Last and C. Lastoria and A. Laundrie and A. Lawrence and I. Lazanu and R. LaZur and T. Le and J. Learned and P. LeBrun and G. Lehmann Miotto and R. Lehnert and M. Leigui de Oliveira and M. Leitner and M. Leyton and L. Li and S. Li and S. Li and T. Li and Y. Li and H. Liao and C. Lin and S. Lin and A. Lister and B.R. Littlejohn and J. Liu and S. Lockwitz and T. Loew and M. Lokajicek and I. Lomidze and K. Long and K. Loo and D. Lorca and T. Lord and J. LoSecco and W.C. Louis and K. Luk and X. Luo and N. Lurkin and T. Lux and V.P. Luzio and D. MacFarland and A. Machado and P. Machado and C. Macias and J. Macier and A. Maddalena and P. Madigan and S. Magill and K. Mahn and A. Maio and J.A. Maloney and G. Mandrioli and J.C. Maneira and L. Manenti and S. Manly and A. Mann and K. Manolopoulos and M. Manrique Plata and A. Marchionni and W. Marciano and D. Marfatia and C. Mariani and J. Maricic and F. Marinho and A.D. Marino and M. Marshak and C. Marshall and J. Marshall and J. Marteau and J. Martin-Albo and N. Martinez and D.A. Martinez Caicedo and S. Martynenko and K. Mason and A. Mastbaum and M. Masud and S. Matsuno and J. Matthews and C. Mauger and N. Mauri and K. Mavrokoridis and R. Mazza and A. Mazzacane and E. Mazzucato and E. McCluskey and N. McConkey and K.S. McFarland and C. McGrew and A. McNab and A. Mefodiev and P. Mehta and P. Melas and M. Mellinato and O. Mena and S. Menary and H. Mendez and A. Menegolli and G. Meng and M. Messier and W. Metcalf and M. Mewes and H. Meyer and T. Miao and G. Michna and T. Miedema and J. Migenda and R. Milincic and W. Miller and J. Mills and C. Milne and O. Mineev and O.G. Miranda and S. Miryala and C. Mishra and S. Mishra and A. Mislivec and D. Mladenov and I. Mocioiu and K. Moffat and N. Moggi and R. Mohanta and T.A. Mohayai and N. Mokhov and J.A. Molina and L. Molina Bueno and A. Montanari and C. Montanari and D. Montanari and L.M. Montano Zetina and J. Moon and M. Mooney and A. Moor and D. Moreno and B. Morgan and C. Morris and C. Mossey and E. Motuk and C.A. Moura and J. Mousseau and W. Mu and L. Mualem and J. Mueller and M. Muether and S. Mufson and F. Muheim and A. Muir and M. Mulhearn and H. Muramatsu and S. Murphy and J. Musser and J. Nachtman and S. Nagu and M. Nalbandyan and R. Nandakumar and D. Naples and S. Narita and D. Navas-Nicol{\'{a}}s and N. Nayak and M. Nebot-Guinot and L. Necib and K. Negishi and J.K. Nelson and J. Nesbit and M. Nessi and D. Newbold and M. Newcomer and D. Newhart and R. Nichol and E. Niner and K. Nishimura and A. Norman and R. Northrop and P. Novella and J.A. Nowak and M. Oberling and A. Olivares Del Campo and A. Olivier and Y. Onel and Y. Onishchuk and J. Ott and L. Pagani and S. Pakvasa and O. Palamara and S. Palestini and J.M. Paley and M. Pallavicini and C. Palomares and E. Pantic and V. Paolone and V. Papadimitriou and R. Papaleo and A. Papanestis and S. Paramesvaran and S. Parke and Z. Parsa and M. Parvu and S. Pascoli and L. Pasqualini and J. Pasternak and J. Pater and C. Patrick and L. Patrizii and R.B. Patterson and S. Patton and T. Patzak and A. Paudel and B. Paulos and L. Paulucci and Z. Pavlovic and G. Pawloski and D. Payne and V. Pec and S.J. Peeters and Y. Penichot and E. Pennacchio and A. Penzo and O.L. Peres and J. Perry and D. Pershey and G. Pessina and G. Petrillo and C. Petta and R. Petti and F. Piastra and L. Pickering and F. Pietropaolo and J. Pillow and R. Plunkett and R. Poling and X. Pons and N. Poonthottathil and S. Pordes and M. Potekhin and R. Potenza and B.V. Potukuchi and J. Pozimski and M. Pozzato and S. Prakash and T. Prakash and S. Prince and G. Prior and D. Pugnere and K. Qi and X. Qian and J. Raaf and R. Raboanary and V. Radeka and J. Rademacker and B. Radics and A. Rafique and E. Raguzin and M. Rai and M. Rajaoalisoa and I. Rakhno and H. Rakotondramanana and L. Rakotondravohitra and Y. Ramachers and R. Rameika and M. Ramirez Delgado and B. Ramson and A. Rappoldi and G. Raselli and P. Ratoff and S. Ravat and H. Razafinime and J. Real and B. Rebel and D. Redondo and M. Reggiani-Guzzo and T. Rehak and J. Reichenbacher and S.D. Reitzner and A. Renshaw and S. Rescia and F. Resnati and A. Reynolds and G. Riccobene and L.C. Rice and K. Rielage and Y. Rigaut and D. Rivera and L. Rochester and M. Roda and P. Rodrigues and M. Rodriguez Alonso and J. Rodriguez Rondon and A. Roeth and H. Rogers and S. Rosauro-Alcaraz and M. Rossella and J. Rout and S. Roy and A. Rubbia and C. Rubbia and B. Russell and J. Russell and D. Ruterbories and R. Saakyan and S. Sacerdoti and T. Safford and N. Sahu and P. Sala and N. Samios and M. Sanchez and D.A. Sanders and D. Sankey and S. Santana and M. Santos-Maldonado and N. Saoulidou and P. Sapienza and C. Sarasty and I. Sarcevic and G. Savage and V. Savinov and A. Scaramelli and A. Scarff and A. Scarpelli and T. Schaffer and H. Schellman and P. Schlabach and D. Schmitz and K. Scholberg and A. Schukraft and E. Segreto and J. Sensenig and I. Seong and A. Sergi and F. Sergiampietri and D. Sgalaberna and M. Shaevitz and S. Shafaq and M. Shamma and H.R. Sharma and R. Sharma and T. Shaw and C. Shepherd-Themistocleous and S. Shin and D. Shooltz and R. Shrock and L. Simard and N. Simos and J. Sinclair and G. Sinev and J. Singh and J. Singh and V. Singh and R. Sipos and F. Sippach and G. Sirri and A. Sitraka and K. Siyeon and D. Smargianaki and A. Smith and A. Smith and E. Smith and P. Smith and J. Smolik and M. Smy and P. Snopok and M. Soares Nunes and H. Sobel and M. Soderberg and C.J. Solano Salinas and S. Söldner-Rembold and N. Solomey and V. Solovov and W.E. Sondheim and M. Sorel and J. Soto-Oton and A. Sousa and K. Soustruznik and F. Spagliardi and M. Spanu and J. Spitz and N.J. Spooner and K. Spurgeon and R. Staley and M. Stancari and L. Stanco and H. Steiner and J. Stewart and B. Stillwell and J. Stock and F. Stocker and T. Stokes and M. Strait and T. Strauss and S. Striganov and A. Stuart and D. Summers and A. Surdo and V. Susic and L. Suter and C. Sutera and R. Svoboda and B. Szczerbinska and A. Szelc and R. Talaga and H. Tanaka and B. Tapia Oregui and A. Tapper and S. Tariq and E. Tatar and R. Tayloe and A. Teklu and M. Tenti and K. Terao and C.A. Ternes and F. Terranova and G. Testera and A. Thea and J.L. Thompson and C. Thorn and S. Timm and A. Tonazzo and M. Torti and M. Tortola and F. Tortorici and D. Totani and M. Toups and C. Touramanis and J. Trevor and W.H. Trzaska and Y.T. Tsai and Z. Tsamalaidze and K. Tsang and N. Tsverava and S. Tufanli and C. Tull and E. Tyley and M. Tzanov and M.A. Uchida and J. Urheim and T. Usher and M. Vagins and P. Vahle and G. Valdiviesso and E. Valencia and Z. Vallari and J.W. Valle and S. Vallecorsa and R. Van Berg and R.G. Van de Water and D. Vanegas Forero and F. Varanini and D. Vargas and G. Varner and J. Vasel and G. Vasseur and K. Vaziri and S. Ventura and A. Verdugo and S. Vergani and M.A. Vermeulen and M. Verzocchi and H. Vieira de Souza and C. Vignoli and C. Vilela and B. Viren and T. Vrba and T. Wachala and A.V. Waldron and M. Wallbank and H. Wang and J. Wang and Y. Wang and Y. Wang and K. Warburton and D. Warner and M. Wascko and D. Waters and A. Watson and P. Weatherly and A. Weber and M. Weber and H. Wei and A. Weinstein and D. Wenman and M. Wetstein and M.R. While and A. White and L.H. Whitehead and D. Whittington and M.J. Wilking and C. Wilkinson and Z. Williams and F. Wilson and R.J. Wilson and J. Wolcott and T. Wongjirad and K. Wood and L. Wood and E. Worcester and M. Worcester and C. Wret and W. Wu and W. Wu and Y. Xiao and G. Yang and T. Yang and N. Yershov and K. Yonehara and T. Young and B. Yu and J. Yu and J. Zalesak and L. Zambelli and B. Zamorano and A. Zani and L. Zazueta and G. Zeller and J. Zennamo and K. Zeug and C. Zhang and M. Zhao and E. Zhivun and G. Zhu and E.D. Zimmerman and M. Zito and S. Zucchelli and J. Zuklin and V. Zutshi and R. Zwaska},
+	title = {Volume {III}. {DUNE} far detector technical coordination},
+	journal = {Journal of Instrumentation},
+	abstract = {The preponderance of matter over antimatter in the early universe, the dynamics of the supernovae that produced the heavy elements necessary for life, and whether protons eventually decay—these mysteries at the forefront of particle physics and astrophysics are key to understanding the early evolution of our universe, its current state, and its eventual fate. The Deep Underground Neutrino Experiment (DUNE) is an international world-class experiment dedicated to addressing these questions as it searches for leptonic charge-parity symmetry violation, stands ready to capture supernova neutrino bursts, and seeks to observe nucleon decay as a signature of a grand unified theory underlying the standard model. The DUNE far detector technical design report (TDR) describes the DUNE physics program and the technical designs of the single- and dual-phase DUNE liquid argon TPC far detector modules. Volume III of this TDR describes how the activities required to design, construct, fabricate, install, and commission the DUNE far detector modules are organized and managed. This volume details the organizational structures that will carry out and/or oversee the planned far detector activities safely, successfully, on time, and on budget. It presents overviews of the facilities, supporting infrastructure, and detectors for context, and it outlines the project-related functions and methodologies used by the DUNE technical coordination organization, focusing on the areas of integration engineering, technical reviews, quality assurance and control, and safety oversight. Because of its more advanced stage of development, functional examples presented in this volume focus primarily on the single-phase (SP) detector module.}
+}
+
+
